# simd-json-ruby

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Gemfile  README.md  Rakefile  simd-json.gemspec
lib/simd/: json.rb
lib/simd/json/: version.rb
src/: exec.rs  implementation.rs  lib.rs
test/: test_helper.rb
test/simd/: json_test.rb
