[package]
name = "simd-json"
version = "0.1.0"
authors = ["Piotr Sarnacki <drogus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "simd_json"

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
rutie = "0.8.2"
simd-json = "0.4.6"
serde_json = "1.0"
serde = "1.0"
mimalloc = { version = "*", default-features = false }
